Working on the blog...

--- a/output/pages/about.html
+++ b/output/pages/about.html
@@ -43,8 +43,7 @@
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content=""/>
 
-  <title>Anders' Blog &ndash;     Tags
-</title>
+  <title>Anders' Blog &ndash; About</title>
 
 </head>
 <body>
@@ -87,16 +86,16 @@
 
 <article class="single">
   <header>
-    <h1>    Tags
-</h1>
+    
+    <h1 id="about">About</h1>
   </header>
   <div>
-    <ul class="list">          <li><a href="/tag/algorithm.html">algorithm</a> (1)</li>
-          <li><a href="/tag/data.html">data</a> (1)</li>
-          <li><a href="/tag/full-stack.html">full-stack</a> (1)</li>
-          <li><a href="/tag/pandas.html">pandas</a> (1)</li>
-    </ul>
-  </div>
+<h3>Who I am</h3>
+<p>test</p>
+<h3>What I do</h3>
+<p>test</p>
+<h3>About this blog</h3>
+<p>testing stuff</p>  </div>
 </article>
 
     <footer>
