--- a/output/pages/contact.html
+++ b/output/pages/contact.html
@@ -43,8 +43,7 @@
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content=""/>
 
-  <title>Anders' Blog &ndash;     Tags
-</title>
+  <title>Anders' Blog &ndash; Contact</title>
 
 </head>
 <body>
@@ -87,16 +86,11 @@
 
 <article class="single">
   <header>
-    <h1>    Tags
-</h1>
+    
+    <h1 id="contact">Contact</h1>
   </header>
   <div>
-    <ul class="list">          <li><a href="/tag/algorithm.html">algorithm</a> (1)</li>
-          <li><a href="/tag/data.html">data</a> (1)</li>
-          <li><a href="/tag/full-stack.html">full-stack</a> (1)</li>
-          <li><a href="/tag/pandas.html">pandas</a> (1)</li>
-    </ul>
-  </div>
+<p>If you're interested in my work or you just have a question or comment, please feel free to contact me anytime.</p>  </div>
 </article>
 
     <footer>
