--- a/output/authors.html
+++ b/output/authors.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" type="text/css" href="/theme/stylesheet/style.min.css">
 
-  <link rel="stylesheet" type="text/css" href="/theme/pygments/github.min.css">
+  <link rel="stylesheet" type="text/css" href="/theme/pygments/monokai.min.css">
   <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/fontawesome.css">
   <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/brands.css">
   <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/solid.css">
@@ -20,15 +20,26 @@
 
 
 
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
 
 
+    <!-- Chrome, Firefox OS and Opera -->
+    <meta name="theme-color" content="#333333">
+    <!-- Windows Phone -->
+    <meta name="msapplication-navbutton-color" content="#333333">
+    <!-- iOS Safari -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <!-- Microsoft EDGE -->
+    <meta name="msapplication-TileColor" content="#333333">
 
     <meta name="author" content="Anders Rye Jacobsen" />
-    <meta name="description" content="" />
+    <meta name="description" content="My thoughts and writings about technology, data-science, life and everything in between" />
 <meta property="og:site_name" content="Anders' Blog"/>
 <meta property="og:type" content="blog"/>
 <meta property="og:title" content="Anders' Blog"/>
-<meta property="og:description" content=""/>
+<meta property="og:description" content="My thoughts and writings about technology, data-science, life and everything in between"/>
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content=""/>
 
@@ -44,26 +55,26 @@
       </a>
       <h1><a href=""></a></h1>
 
-
+<p>Economics student who loves everything technology and programming</p>
       <nav>
         <ul class="list">
+          <li><a href="/pages/about.html#about">About</a></li>
+          <li><a href="/pages/contact.html#contact">Contact</a></li>
 
           <li><a href="http://getpelican.com/" target="_blank">Pelican</a></li>
           <li><a href="http://python.org/" target="_blank">Python.org</a></li>
-          <li><a href="http://jinja.pocoo.org/" target="_blank">Jinja2</a></li>
-          <li><a href="#" target="_blank">You can modify those links in your config file</a></li>
         </ul>
       </nav>
 
       <ul class="social">
           <li>
-            <a  class="sc-You can add links in your config file" href="#" target="_blank">
-            <i class="fab fa-You can add links in your config file">
+            <a  class="sc-linkedin" href="https://linkedin.com/in/anders-rye-jacobsen" target="_blank">
+            <i class="fab fa-linkedin">
             </i>
           </a></li>
           <li>
-            <a  class="sc-Another social link" href="#" target="_blank">
-            <i class="fab fa-Another social link">
+            <a  class="sc-github" href="https://github.com/ismand95" target="_blank">
+            <i class="fab fa-github">
             </i>
           </a></li>
       </ul>
@@ -81,7 +92,7 @@
   </header>
   <div>
     <ul class="list">
-      <li><a href="/author/david-farrell.html">David Farrell</a> (1)</li>
+      <li><a href="/author/anders-rye-jacobsen.html">Anders Rye Jacobsen</a> (1)</li>
     </ul>
   </div>
 </article>
@@ -102,7 +113,7 @@
   "name": " Anders' Blog ",
   "url" : "",
   "image": "",
-  "description": ""
+  "description": "My thoughts and writings about technology, data-science, life and everything in between"
 }
 </script>
 
