--- a/output/pages/about-date-2015-07-18-0800.html
+++ b/output/pages/about-date-2015-07-18-0800.html
@@ -43,8 +43,7 @@
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content=""/>
 
-  <title>Anders' Blog &ndash;     Tags
-</title>
+  <title>Anders' Blog &ndash; About Date: 2015-07-18 08:00</title>
 
 </head>
 <body>
@@ -58,11 +57,12 @@
 <p>Economics student who loves everything technology and programming</p>
       <nav>
         <ul class="list">
-          <li><a href="/pages/about.html#about">About</a></li>
-          <li><a href="/pages/contact.html#contact">Contact</a></li>
+          <li><a href="/pages/about-date-2015-07-18-0800.html#about-date-2015-07-18-0800">About Date: 2015-07-18 08:00</a></li>
 
           <li><a href="http://getpelican.com/" target="_blank">Pelican</a></li>
           <li><a href="http://python.org/" target="_blank">Python.org</a></li>
+          <li><a href="http://jinja.pocoo.org/" target="_blank">Jinja2</a></li>
+          <li><a href="#" target="_blank">You can modify those links in your config file</a></li>
         </ul>
       </nav>
 
@@ -87,16 +87,18 @@
 
 <article class="single">
   <header>
-    <h1>    Tags
-</h1>
+    
+    <h1 id="about-date-2015-07-18-0800">About Date: 2015-07-18 08:00</h1>
   </header>
   <div>
-    <ul class="list">          <li><a href="/tag/algorithm.html">algorithm</a> (1)</li>
-          <li><a href="/tag/data.html">data</a> (1)</li>
-          <li><a href="/tag/full-stack.html">full-stack</a> (1)</li>
-          <li><a href="/tag/pandas.html">pandas</a> (1)</li>
-    </ul>
-  </div>
+<p>Who I am
+I'm Alexandre Vicenzi and I live in Blumenau - Brazil.</p>
+<p>What I do
+I work for Eventials building the most awesome video streaming platform.</p>
+<p>About this blog
+As you can see, English is not my native language. You may find some grammar errors if so, please contact me.</p>
+<p>I like to write in English, it's a good way to improve my skills. If you want the Portuguese version of my writings you may want to take a look at Buteco Open Source or at FilipeFlop.</p>
+<p>The goal of this blog is to talk about things I'm working on.</p>  </div>
 </article>
 
     <footer>
