--- a/borsbar.html
+++ b/borsbar.html
@@ -10,12 +10,12 @@
 
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="https://ismand95.github.io/theme/stylesheet/style.min.css">
 
-  <link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/pygments/default.min.css">
-  <link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/font-awesome/css/fontawesome.css">
-  <link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/font-awesome/css/brands.css">
-  <link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/font-awesome/css/solid.css">
+  <link rel="stylesheet" type="text/css" href="https://ismand95.github.io/theme/pygments/default.min.css">
+  <link rel="stylesheet" type="text/css" href="https://ismand95.github.io/theme/font-awesome/css/fontawesome.css">
+  <link rel="stylesheet" type="text/css" href="https://ismand95.github.io/theme/font-awesome/css/brands.css">
+  <link rel="stylesheet" type="text/css" href="https://ismand95.github.io/theme/font-awesome/css/solid.css">
 
 
 
@@ -42,11 +42,11 @@
 <meta property="og:title" content="Developing StockMarket Bar Software"/>
 <meta property="og:description" content="What I learned as an Economics student, who went solo and developed a full-stack system."/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="http://localhost:8000/borsbar.html"/>
+<meta property="og:url" content="https://ismand95.github.io/borsbar.html"/>
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2019-02-18 19:30:00+01:00"/>
 <meta property="article:modified_time" content="2019-02-18 19:30:00+01:00"/>
-<meta property="article:author" content="http://localhost:8000/author/anders-rye-jacobsen.html">
+<meta property="article:author" content="https://ismand95.github.io/author/anders-rye-jacobsen.html">
 <meta property="article:section" content="Python"/>
 <meta property="article:tag" content="pandas"/>
 <meta property="article:tag" content="data"/>
@@ -62,16 +62,16 @@
 <body>
   <aside>
     <div>
-      <a href="http://localhost:8000">
-        <img src="http://localhost:8000/theme/img/profile.png" alt="Anders Rye Jacobsen" title="Anders Rye Jacobsen">
+      <a href="https://ismand95.github.io">
+        <img src="https://ismand95.github.io/theme/img/profile.png" alt="Anders Rye Jacobsen" title="Anders Rye Jacobsen">
       </a>
-      <h1><a href="http://localhost:8000">Anders Rye Jacobsen</a></h1>
+      <h1><a href="https://ismand95.github.io">Anders Rye Jacobsen</a></h1>
 
 <p><br>Economics student who loves everything<br> technology, coding and data-science</p>
       <nav>
         <ul class="list">
-          <li><a href="http://localhost:8000/pages/about.html#about">About</a></li>
-          <li><a href="http://localhost:8000/pages/contact.html#contact">Contact</a></li>
+          <li><a href="https://ismand95.github.io/pages/about.html#about">About</a></li>
+          <li><a href="https://ismand95.github.io/pages/contact.html#contact">Contact</a></li>
 
         </ul>
       </nav>
@@ -95,7 +95,7 @@
   <main>
 
     <nav>
-      <a href="http://localhost:8000">    Home
+      <a href="https://ismand95.github.io">    Home
 </a>
 
       <a href="/archives">Archive</a>
@@ -109,7 +109,7 @@
       
     <h1 id="borsbar">Developing StockMarket Bar Software</h1>
     <p>
-          Posted on Mon 18 February 2019 in <a href="http://localhost:8000/category/python.html">Python</a>
+          Posted on Mon 18 February 2019 in <a href="https://ismand95.github.io/category/python.html">Python</a>
 
 
     </p>
@@ -132,12 +132,12 @@ The concept of Stock</p>
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="http://localhost:8000/tag/pandas.html">pandas</a>
-      <a href="http://localhost:8000/tag/data.html">data</a>
-      <a href="http://localhost:8000/tag/algorithms.html">algorithms</a>
-      <a href="http://localhost:8000/tag/full-stack-development.html">full-stack development</a>
-      <a href="http://localhost:8000/tag/databases.html">databases</a>
-      <a href="http://localhost:8000/tag/qt.html">QT</a>
+      <a href="https://ismand95.github.io/tag/pandas.html">pandas</a>
+      <a href="https://ismand95.github.io/tag/data.html">data</a>
+      <a href="https://ismand95.github.io/tag/algorithms.html">algorithms</a>
+      <a href="https://ismand95.github.io/tag/full-stack-development.html">full-stack development</a>
+      <a href="https://ismand95.github.io/tag/databases.html">databases</a>
+      <a href="https://ismand95.github.io/tag/qt.html">QT</a>
     </p>
   </div>
 
@@ -161,7 +161,7 @@ The concept of Stock</p>
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " Anders' Blog ",
-  "url" : "http://localhost:8000",
+  "url" : "https://ismand95.github.io",
   "image": "",
   "description": "My thoughts and writings about technology, data-science, life and everything in between"
 }
