--- a/data.html
+++ b/data.html
@@ -20,12 +20,12 @@
 
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="http://ismand95.github.io/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="https://ismand95.github.io/theme/stylesheet/style.min.css">
 
-  <link rel="stylesheet" type="text/css" href="http://ismand95.github.io/theme/pygments/default.min.css">
-  <link rel="stylesheet" type="text/css" href="http://ismand95.github.io/theme/font-awesome/css/fontawesome.css">
-  <link rel="stylesheet" type="text/css" href="http://ismand95.github.io/theme/font-awesome/css/brands.css">
-  <link rel="stylesheet" type="text/css" href="http://ismand95.github.io/theme/font-awesome/css/solid.css">
+  <link rel="stylesheet" type="text/css" href="https://ismand95.github.io/theme/pygments/default.min.css">
+  <link rel="stylesheet" type="text/css" href="https://ismand95.github.io/theme/font-awesome/css/fontawesome.css">
+  <link rel="stylesheet" type="text/css" href="https://ismand95.github.io/theme/font-awesome/css/brands.css">
+  <link rel="stylesheet" type="text/css" href="https://ismand95.github.io/theme/font-awesome/css/solid.css">
 
 
 
@@ -52,11 +52,11 @@
 <meta property="og:title" content="Det er på høje tid, vi taler om, hvordan vi arbejder med data!"/>
 <meta property="og:description" content="Der er nogle helt fundamentale udfordringer med de dataredskaber, vi benytter - det er på tide, vi tænker ud af Excel-kassen"/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="http://ismand95.github.io/data.html"/>
+<meta property="og:url" content="https://ismand95.github.io/data.html"/>
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2019-07-16 00:00:00+02:00"/>
 <meta property="article:modified_time" content="2019-07-16 00:00:00+02:00"/>
-<meta property="article:author" content="http://ismand95.github.io/author/anders-rye-jacobsen.html">
+<meta property="article:author" content="https://ismand95.github.io/author/anders-rye-jacobsen.html">
 <meta property="article:section" content="Opinions"/>
 <meta property="article:tag" content="data"/>
 <meta property="article:tag" content="programming"/>
@@ -71,16 +71,16 @@
 <body>
   <aside>
     <div>
-      <a href="http://ismand95.github.io">
-        <img src="http://ismand95.github.io/theme/img/profile.png" alt="Anders Rye Jacobsen" title="Anders Rye Jacobsen">
+      <a href="https://ismand95.github.io">
+        <img src="https://ismand95.github.io/theme/img/profile.png" alt="Anders Rye Jacobsen" title="Anders Rye Jacobsen">
       </a>
-      <h1><a href="http://ismand95.github.io">Anders Rye Jacobsen</a></h1>
+      <h1><a href="https://ismand95.github.io">Anders Rye Jacobsen</a></h1>
 
 <p><br>Economics student who loves everything<br> technology, coding and data-science related</p>
       <nav>
         <ul class="list">
-          <li><a href="http://ismand95.github.io/pages/about.html#about">About</a></li>
-          <li><a href="http://ismand95.github.io/pages/contact.html#contact">Contact</a></li>
+          <li><a href="https://ismand95.github.io/pages/about.html#about">About</a></li>
+          <li><a href="https://ismand95.github.io/pages/contact.html#contact">Contact</a></li>
 
         </ul>
       </nav>
@@ -104,7 +104,7 @@
   <main>
 
     <nav>
-      <a href="http://ismand95.github.io">    Home
+      <a href="https://ismand95.github.io">    Home
 </a>
 
       <a href="/archives">Archive</a>
@@ -118,7 +118,7 @@
       
     <h1 id="data">Det er på høje tid, vi taler om, hvordan vi arbejder med data!</h1>
     <p>
-          Posted on Tue 16 July 2019 in <a href="http://ismand95.github.io/category/opinions.html">Opinions</a>
+          Posted on Tue 16 July 2019 in <a href="https://ismand95.github.io/category/opinions.html">Opinions</a>
 
 
     </p>
@@ -286,11 +286,11 @@ Det er vigtigt for mig at markere, hvor tilgængelige og stærke alternative red
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="http://ismand95.github.io/tag/data.html">data</a>
-      <a href="http://ismand95.github.io/tag/programming.html">programming</a>
-      <a href="http://ismand95.github.io/tag/python.html">python</a>
-      <a href="http://ismand95.github.io/tag/excel.html">excel</a>
-      <a href="http://ismand95.github.io/tag/sql.html">SQL</a>
+      <a href="https://ismand95.github.io/tag/data.html">data</a>
+      <a href="https://ismand95.github.io/tag/programming.html">programming</a>
+      <a href="https://ismand95.github.io/tag/python.html">python</a>
+      <a href="https://ismand95.github.io/tag/excel.html">excel</a>
+      <a href="https://ismand95.github.io/tag/sql.html">SQL</a>
     </p>
   </div>
 
@@ -314,7 +314,7 @@ Det er vigtigt for mig at markere, hvor tilgængelige og stærke alternative red
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " Anders' Blog ",
-  "url" : "http://ismand95.github.io",
+  "url" : "https://ismand95.github.io",
   "image": "",
   "description": "My thoughts and writings about technology, data-science, life and everything in between"
 }
